objects/SPM_AccountMVendor_Region__c.object
<CustomObject>
    <description>Region Coverage</description>
    <fields>
        <fullName>AccountMVendor_ID__c</fullName>
        <description>AccountMVendor ID</description>
        <inlineHelpText>AccountMVendor ID</inlineHelpText>
        <label>AccountMVendor ID</label>
        <referenceTo>SPM_PVendor_MVendor__c</referenceTo>
        <relationshipLabel>MVendor Region Coverage</relationshipLabel>
        <relationshipName>MVendor_Region_Coverage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Sales__c</fullName>
        <formula>Region_ID__r.Actual_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Sales ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regions ID</description>
        <inlineHelpText>Regions ID</inlineHelpText>
        <label>Region ID</label>
        <referenceTo>SPM_Account_Regions__c</referenceTo>
        <relationshipLabel>MVendor Region Coverage (Regions ID)</relationshipLabel>
        <relationshipName>MVendor_Region_Coverage1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Owner__c</fullName>
        <formula>Region_ID__r.Region_Owner__r.LastName &amp; &quot;, &quot; &amp;  Region_ID__r.Region_Owner__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <formula>Region_ID__r.SPM_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBI_Score_Last_Quarter__c</fullName>
        <formula>Region_ID__r.SBI_Score_Last_Quarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBI Score - Last Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>MVendor Region Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AMR-{00000}</displayFormat>
        <label>AccountMVendor Region ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MVendor Region Coverage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>